--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "date-fns": "^2.30.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
-    "styled-components": "^6.0.0-rc.1"
+    "styled-components": "^6.0.0-rc.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
