--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-select": "^5.7.3",
     "styled-components": "^6.0.0-rc.1",
     "yup": "^1.1.1"
   },
